--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ code {
   border-top: 16px;
   padding: 16px;
   border-radius: 16px;
+  margin-bottom: 20px;
 }
 
 .name {
@@ -27,4 +28,13 @@ code {
   margin-left: 10%;
   margin-right: 10%;
   font-size: 36px;
+}
+
+.button {
+  width: 60%;
+  height: 60px;
+  font-size: 24px;
+  margin-left: 20%;
+  margin-right: 20%;
+  border-radius: 20px
 }
