--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 0, 20%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -28,13 +28,4 @@ code {
   margin-left: 10%;
   margin-right: 10%;
   font-size: 36px;
-}
-
-.button {
-  width: 60%;
-  height: 60px;
-  font-size: 24px;
-  margin-left: 20%;
-  margin-right: 20%;
-  border-radius: 20px
 }
