--- a/src/views/modalmenu.css
+++ b/src/views/modalmenu.css
@@ -1,9 +1,22 @@
+.menu {
+  list-style-type: none;
+  background-color:rgb(154, 223, 85);
+  padding: 20px;
+  margin-left: 20%;
+  margin-right: 20%;
+  text-align: center;
+  border-radius: 20px;
+}
+
+li{
+  margin: 14px;
+}
+
 .button {
     width: 60%;
     height: 60px;
     font-size: 24px;
-    margin-left: 20%;
-    margin-right: 20%;
     border-radius: 20px;
     cursor: pointer;
-  }
+    background-color: rgb(175, 229, 122);
+}
