--- a/src/views/modalmenu.css
+++ b/src/views/modalmenu.css
@@ -21,4 +21,10 @@ li{
     border-radius: 20px;
     cursor: pointer;
     background-color: rgb(175, 229, 122);
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: rgb(140, 185, 95);
+  transition: background-color 0.3s ease;
 }
