--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
   margin-bottom: 20px;
   border-color: black;
   border-style: solid;
+  cursor: default;
 }
 
 .name {
@@ -31,6 +32,7 @@ code {
   font-size: 36px;
   color: black;
   transition: color 0.75s ease;
+  cursor:default;
 }
 
 .name:hover {
