--- a/src/views/modal.css
+++ b/src/views/modal.css
@@ -3,6 +3,21 @@
     padding: 30px;
     border-style: solid;
     border-radius: 16px;
+    max-height: 90vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal > .content{
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 10px;
+}
+
+.modal > .header {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 18px;
 }
 
 .modal > .close {
