--- a/src/views/modal.css
+++ b/src/views/modal.css
@@ -8,6 +8,11 @@
     flex-direction: column;
 }
 
+.modal > .project{
+    font-size: 24px;
+    margin-bottom: 18px;
+}
+
 .modal > .content{
     flex-grow: 1;
     overflow-y: auto;
