--- a/src/views/modal.css
+++ b/src/views/modal.css
@@ -4,19 +4,34 @@
     border-style: solid;
     border-radius: 16px;
     max-height: 90vh;
+    max-width: 90vw;
     display: flex;
     flex-direction: column;
-}
-
-.modal > .project{
-    font-size: 24px;
-    margin-bottom: 18px;
 }
 
 .modal > .content{
     flex-grow: 1;
     overflow-y: auto;
     padding: 10px;
+    overflow-x: hidden;
+}
+
+.modal > .conetnt > .project{
+    font-size: 24px;
+    margin-bottom: 18px;
+}
+
+.twoimg{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.twoimg > img{
+    max-width: 50%;
+    height: auto;
+    object-fit: contain;
+    border-radius: 16px;
 }
 
 .modal > .header {
@@ -41,6 +56,15 @@
 .modal > .close:hover{
     background-color: rgb(140, 185, 95);
     transition: background-color 0.3s ease;
+}
+
+.modal > .content > img {
+    max-width: 80%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    object-fit: contain;
+    border-radius: 16px;
 }
 
 /* Figure this stuff out later :) */
