--- a/src/views/modal.css
+++ b/src/views/modal.css
@@ -16,7 +16,7 @@
     overflow-x: hidden;
 }
 
-.modal > .conetnt > .project{
+.modal > .content > .project{
     font-size: 24px;
     margin-bottom: 18px;
 }
